= 0.1.7
== ...
* Twitter messages to announce new entries are generated as prefix + title + url, truncating as needed to fit in 140 char

= 0.1.6
=== 20th January, 2010
* Upgraded to use rails 2.3.4
* Added support for Slideshare (feature introduced by @javier)
* Added support for Delicious (feature introduced by @ceritium)

= 0.1.5
=== 8th July, 2009
* Optional SHA1 for admin password on config/planetoid.yml (thanks to @nickel)

= 0.1.4
=== 8th July, 2009
* Optimized feed parsing by passing etag if available (thanks to @pantulis)

= 0.1.3
=== 28th June, 2009
* Added site URL to config/planetoid.yml.example
* Added twitter integration so it can notify of new members, feeds, entries and projects to a given twitter account

= 0.1.2
=== 12th June, 2009
* Added direct routes to user slugs, like "/jaime-iniesta", as a shortcut to "/members/jaime-iniesta"

= 0.1.1
=== 11th June, 2009
* Added sluggable_finder gem for user permalinks
* User routes names as "members"

= 0.1.0
=== 7th June, 2009
* Entries truncate length and strip tags on summaries are configurable, turned on by default
* Showing avatar for users is configurable, turned on by default

= 0.0.9
=== 7th June, 2009
* Made home configurable, you can decide to show header, footer, users, projects, entries in home, and avatars and summaries on entries
* Removed tips
* User email is no longer mandatory
* Feed URL is configurable, to use external services like FeedBurner (real URL is /entries.rss)

= 0.0.8
=== 6th June, 2009
* Made planetoid more flexible by not pretending it will be used for a developers community, by:
* Removing tips for creating project
* Not showing twitter / github links if empty
* Refactoring and adding tests for twitter_url and github_url

= 0.0.7
=== 6th June, 2009
* Added google analytics support
* Cache for javascript and css

= 0.0.6
=== 5th June, 2009
* DRYed up and simplified views
* Removed show actions on entries and feeds
* Removed destroy action on entries